--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "react-scripts": "5.0.1",
     "redux": "^4.2.1",
     "sass": "^1.59.3",
+    "slugify": "^1.6.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
   },
