--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@phosphor-icons/react": "^2.0.6",
+    "@heroicons/react": "^2.0.16",
     "@reduxjs/toolkit": "^1.9.3",
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
@@ -14,6 +14,7 @@
     "@types/react-dom": "^18.0.11",
     "@types/react-transition-group": "^4.4.5",
     "antd": "^5.3.2",
+    "history": "^5.3.0",
     "react": "^18.2.0",
     "react-css-modules": "^4.7.11",
     "react-dom": "^18.2.0",
